vendor/structopt-0.3.21/tests/ui/opt_vec_nonpositional.stderr
error: Option<Vec<T>> type is meaningless for positional argument
  --> $DIR/opt_vec_nonpositional.rs:14:8
   |
14 |     n: Option<Vec<u32>>,
   |        ^^^^^^^^^^^^^^^^
